--- a/CrudApp2/appsettings.json
+++ b/CrudApp2/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "Default": "Server=DESKTOP-F51ONJH;Database=UserApp;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=true"
+  },
   "AllowedHosts": "*"
 }
